# stringio

./: Cargo.toml  README.md
src/: lib.rs  read.rs  write.rs
